Fix titlebar tabs overflowing (#38)

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -134,6 +134,12 @@
   }
 }
 
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 /* These styles are unique to electron and cannot be applied with tailwind or inline */
 
 .draggable {
